# rust-simple-api

./: Cargo.toml  README.md
src/: main.rs
src/model/: grade.rs  lesson.rs  mod.rs  student.rs
src/route/: grade_route.rs  lesson_route.rs  mod.rs  student_route.rs
src/view/: grade_view_model.rs  lesson_view_model.rs  mod.rs  student_view_model.rs
