# Cargo.toml

[package]
name = "simpleAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.0"
# Async Runtime
tokio = { version = "1.0", features = ["full"] } 
futures = "0.3"
# Serialisasi/Deserialisasi
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Untuk respons JSON sederhana
# MongoDB Driver
mongodb = "3.4.1" 
bson = "2.15.0"
actix-cors = "0.7" 